fix: text nowrap and page meta tags

--- a/src/components/body.module.css
+++ b/src/components/body.module.css
@@ -19,7 +19,7 @@
     margin-left: 35vw;
     width: 65vw;
     display: flex;
-    align-items: start;   
+    align-items: flex-start;   
     border-left: solid 4px black;
 }
 
@@ -46,8 +46,8 @@
 
 .treeNav{
     display: block;
-    white-space: nowrap;
     color: black;
+    line-height: 1.5;
     position: relative;
     
 }
